crates/function-metrics/tests/ui/fail/const_function.rs
use function_metrics::function_metrics;

#[function_metrics]
const fn constant() -> u64 {
    1
}

fn main() {}
